--- a/wheres-my-room/View/FloorMapView.xib
+++ b/wheres-my-room/View/FloorMapView.xib
@@ -12,11 +12,15 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clipsSubviews="YES" contentMode="scaleToFill" id="LHq-4R-Cqd">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yq4-f9-DJu" userLabel="mapImage">
+                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yq4-f9-DJu" userLabel="mapImage">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <gestureRecognizers/>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="zZe-xq-g9p" appends="YES" id="8zL-1m-WpH"/>
+                    </connections>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="current-location" translatesAutoresizingMaskIntoConstraints="NO" id="GoM-gc-651">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
@@ -53,12 +57,12 @@
                     <exclude reference="GoM-gc-651"/>
                 </mask>
                 <mask key="constraints">
+                    <exclude reference="W7D-8A-Abb"/>
+                    <exclude reference="YyT-7X-A5L"/>
                     <exclude reference="A81-g6-BEA"/>
                     <exclude reference="XbN-ZG-97N"/>
                     <exclude reference="YDo-aF-kjP"/>
                     <exclude reference="vCJ-z8-9as"/>
-                    <exclude reference="W7D-8A-Abb"/>
-                    <exclude reference="YyT-7X-A5L"/>
                 </mask>
             </variation>
             <variation key="widthClass=compact">
@@ -67,16 +71,21 @@
                     <include reference="GoM-gc-651"/>
                 </mask>
                 <mask key="constraints">
+                    <include reference="W7D-8A-Abb"/>
+                    <include reference="YyT-7X-A5L"/>
                     <include reference="A81-g6-BEA"/>
                     <include reference="XbN-ZG-97N"/>
                     <include reference="YDo-aF-kjP"/>
                     <include reference="vCJ-z8-9as"/>
-                    <include reference="W7D-8A-Abb"/>
-                    <include reference="YyT-7X-A5L"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="320" y="341"/>
         </view>
+        <tapGestureRecognizer id="zZe-xq-g9p">
+            <connections>
+                <action selector="onMapImageTap:" destination="-1" id="Mqg-XD-ULo"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="current-location" width="32" height="32"/>
