--- a/wheres-my-room/View/FloorMapView.xib
+++ b/wheres-my-room/View/FloorMapView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -8,6 +8,7 @@
             <connections>
                 <outlet property="currentLocImageView" destination="GoM-gc-651" id="cYp-NQ-lgZ"/>
                 <outlet property="mapImageView" destination="yq4-f9-DJu" id="mJ9-Dz-aLb"/>
+                <outlet property="roomPinImageView" destination="Hys-Cy-iEK" id="ESv-Dd-aQI"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -40,6 +41,14 @@
                             <include reference="9R6-3D-t0v"/>
                         </mask>
                     </variation>
+                </imageView>
+                <imageView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="Hys-Cy-iEK">
+                    <rect key="frame" x="9" y="-3" width="24" height="24"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="24" id="Kmi-x5-ZBW"/>
+                        <constraint firstAttribute="height" constant="24" id="SCv-l9-col"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -89,5 +98,6 @@
     </objects>
     <resources>
         <image name="current-location" width="32" height="32"/>
+        <image name="location" width="102" height="102"/>
     </resources>
 </document>
