--- a/wheres-my-room/Control/RoomDetailControllerViewController.xib
+++ b/wheres-my-room/Control/RoomDetailControllerViewController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RoomDetailControllerViewController">
             <connections>
+                <outlet property="bgImageView" destination="I8Q-1I-AlO" id="8Gz-y2-vfq"/>
                 <outlet property="favoritedButton" destination="8Yr-Bm-Eq0" id="9Vu-p4-E7i"/>
                 <outlet property="isRoomAvailableLabel" destination="oEM-03-GXK" id="w6y-By-sZK"/>
                 <outlet property="meetingsBtn" destination="i5M-Pr-FkT" id="f44-L7-FUy"/>
@@ -87,6 +88,9 @@
                         <action selector="favoriteButtonClicked:" destination="-1" eventType="touchUpInside" id="ZHy-8q-uTA"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bg_main.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="I8Q-1I-AlO">
+                    <rect key="frame" x="143" y="27" width="277" height="337"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -96,6 +100,9 @@
                 <constraint firstItem="QXM-PR-FYd" firstAttribute="top" secondItem="kxr-Zp-p0N" secondAttribute="bottom" constant="9" id="Hrg-BP-cee"/>
                 <constraint firstItem="MvA-CE-StI" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="PM9-hd-Qi1"/>
                 <constraint firstItem="zWC-HQ-aik" firstAttribute="top" secondItem="QXM-PR-FYd" secondAttribute="bottom" constant="8" id="Pec-aZ-qYx"/>
+                <constraint firstItem="I8Q-1I-AlO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Qkv-uy-SOh"/>
+                <constraint firstAttribute="bottom" secondItem="I8Q-1I-AlO" secondAttribute="bottom" id="Tli-tg-R9v"/>
+                <constraint firstAttribute="trailing" secondItem="I8Q-1I-AlO" secondAttribute="trailing" id="U45-h2-buh"/>
                 <constraint firstItem="oEM-03-GXK" firstAttribute="leading" secondItem="zWC-HQ-aik" secondAttribute="trailing" constant="16" id="Ug2-Fe-sC0"/>
                 <constraint firstItem="j1w-dv-Ej9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Wsf-Y4-Ifj"/>
                 <constraint firstItem="zWC-HQ-aik" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Zr0-dN-DCk"/>
@@ -103,6 +110,7 @@
                 <constraint firstItem="MvA-CE-StI" firstAttribute="top" secondItem="9cG-vo-JQx" secondAttribute="bottom" constant="8" id="hyY-ey-poW"/>
                 <constraint firstItem="8Wl-nk-Brs" firstAttribute="centerY" secondItem="QXM-PR-FYd" secondAttribute="centerY" id="iMj-Yr-iRJ"/>
                 <constraint firstItem="j1w-dv-Ej9" firstAttribute="top" secondItem="zWC-HQ-aik" secondAttribute="bottom" constant="14.5" id="jh7-QH-gqg"/>
+                <constraint firstItem="I8Q-1I-AlO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="kDb-lg-qoP"/>
                 <constraint firstItem="8Wl-nk-Brs" firstAttribute="leading" secondItem="QXM-PR-FYd" secondAttribute="trailing" constant="16" id="mJK-1m-GbT"/>
                 <constraint firstItem="HO4-zD-cCO" firstAttribute="centerY" secondItem="8Yr-Bm-Eq0" secondAttribute="centerY" id="mYq-5j-QH5"/>
                 <constraint firstItem="kxr-Zp-p0N" firstAttribute="centerY" secondItem="MvA-CE-StI" secondAttribute="centerY" id="p48-0f-CbI"/>
@@ -115,6 +123,7 @@
         </view>
     </objects>
     <resources>
+        <image name="bg_main.jpg" width="1242" height="2208"/>
         <image name="tweet_favorite_off" width="16" height="16"/>
         <image name="tweet_favorite_on" width="16" height="16"/>
     </resources>
